Fix build and fix logging

--- a/VST2/Makefile
+++ b/VST2/Makefile
@@ -3,7 +3,7 @@ TARGET := HelloVST2
 
 FLAGS += -g
 FLAGS += -O3 -march=nocona -ffast-math
-FLAGS += -Wall -Wextra
+FLAGS += -Wall -Wextra -Wno-unused-parameter
 FLAGS += -fPIC
 FLAGS += -I$(VST2_SDK)
 CXXFLAGS += -std=c++11
@@ -11,19 +11,19 @@ CXXFLAGS += -std=c++11
 
 # Detect architecture
 MACHINE = $(shell $(CC) -dumpmachine)
-else ifneq (, $(findstring apple, $(MACHINE)))
-	ARCH ?= mac
+ifneq (, $(findstring apple, $(MACHINE)))
+	ARCH_MAC = 1
 else ifneq (, $(findstring mingw, $(MACHINE)))
-	ARCH ?= win
-ifneq (, $(findstring linux, $(MACHINE)))
-	ARCH ?= lin
+	ARCH_WIN = 1
+else ifneq (, $(findstring linux, $(MACHINE)))
+	ARCH_LIN = 1
 else
 $(error Could not determine architecture)
 endif
 
 
 # Architecture-dependent variables
-ifeq ($(ARCH), mac)
+ifdef ARCH_MAC
 	FLAGS += -arch i386 -arch x86_64
 	CXXFLAGS += -stdlib=libc++
 	LDFLAGS += -stdlib=libc++
@@ -33,16 +33,19 @@ ifeq ($(ARCH), mac)
 	LDFLAGS += -bundle
 	BUNDLE := $(TARGET).vst
 endif
-ifeq ($(ARCH), win)
+ifdef ARCH_WIN
 	LDFLAGS += -shared -static
 	TARGET := $(TARGET).dll
 endif
-ifeq ($(ARCH), lin)
-$(error Build not available on Linux, although it's possible with modifications)
+ifdef ARCH_LIN
+$(error Build not available on Linux, although it's possible. If you can figure it out, send a PR)
 endif
 
 
-SOURCES += HelloVST.cpp
+CFLAGS += $(FLAGS)
+CXXFLAGS += $(FLAGS)
+
+SOURCES += HelloVST2.cpp
 SOURCES += $(VST2_SDK)/public.sdk/source/vst2.x/audioeffect.cpp
 SOURCES += $(VST2_SDK)/public.sdk/source/vst2.x/audioeffectx.cpp
 SOURCES += $(VST2_SDK)/public.sdk/source/vst2.x/vstplugmain.cpp
@@ -51,7 +54,7 @@ SOURCES += $(VST2_SDK)/public.sdk/source/vst2.x/vstplugmain.cpp
 all: dist
 
 dist: $(TARGET)
-ifeq ($(ARCH), mac)
+ifdef ARCH_MAC
 	strip -S $(TARGET)
 	mkdir -p $(BUNDLE)/Contents
 	cp Info.plist $(BUNDLE)/Contents/Info.plist
@@ -59,12 +62,29 @@ ifeq ($(ARCH), mac)
 	mkdir -p $(BUNDLE)/Contents/MacOS
 	cp $(TARGET) $(BUNDLE)/Contents/MacOS/
 endif
-ifeq ($(ARCH), win)
+ifdef ARCH_WIN
 	strip -s $(TARGET)
 endif
 
+install: dist
+ifdef ARCH_MAC
+	sudo cp -R $(BUNDLE) /Library/Audio/Plug-Ins/VST/
+endif
+ifdef ARCH_WIN
+	mkdir -p /c/Program\ Files/Steinberg/VstPlugins
+	cp -R $(TARGET) /c/Program\ Files/Steinberg/VstPlugins/
+endif
+
+uninstall:
+ifdef ARCH_MAC
+	sudo rm -rfv /Library/Audio/Plug-Ins/VST/$(BUNDLE)
+endif
+ifdef ARCH_WIN
+	rm /c/Program\ Files/Steinberg/VstPlugins/$(TARGET)
+endif
+
 clean:
-	rm -rfv build $(TARGET)
+	rm -rfv build $(TARGET) $(BUNDLE)
 
 
 OBJECTS := $(patsubst %, build/%.o, $(SOURCES)) $(OBJECTS)
