Move VST back to VST2, fix build on Linux

--- a/VST2/Makefile
+++ b/VST2/Makefile
@@ -39,7 +39,9 @@ ifdef ARCH_WIN
 	TARGET := $(TARGET).dll
 endif
 ifdef ARCH_LIN
-$(error Build not available on Linux, although it's possible. If you can figure it out, send a PR)
+	FLAGS += -D__cdecl=""
+	LDFLAGS += -shared
+	TARGET := $(TARGET).so
 endif
 
 
